tests/compiler/typecheck/record_type_2.kk.out
1
========

========
error:
  ┌─ tests/compiler/typecheck/record_type_2.kk:6:17
  │
6 │ let z: string = x.x
  │                 ^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - string      | + number    |
    +---------------+-------------+
