tests/compiler/typecheck/record_type_2.kk
let x = {
  x = 2,
  y = "hello",
}

let z: string = x.x
